--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@
 
     <!-- screen que aparecerão as skins -->
     <div class="skin-carousel">
-      <p></p>
-      <button class="carousel-button carousel-button--left"></button>
       <div class="carousel-track-container">
-        <ul class="carousel-track" id="carousel-track"></ul>
-      </div>
-      <button class="carousel-button carousel-button--right"></button>
+        <ul class="carousel-track" id="carousel-track">
+          <li id="carousel-text">
+            Selecione o campeão do qual deseja ver as skins!
+          </li>
+        </div>
+        </ul>
+        <button class="carousel-button left">
+          <img
+            src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/50/000000/external-right-chevron-arrows-dreamstale-lineal-dreamstale-3.png"
+          />
+        </button>
+        <button class="carousel-button right">
+          <img
+            src="https://img.icons8.com/external-dreamstale-lineal-dreamstale/50/000000/external-right-chevron-arrows-dreamstale-lineal-dreamstale-2.png"
+          />
+        </button>
+
     </div>
 
     <!-- botões para cada campeão -->
